--- a/.github/ISSUE_TEMPLATE/chore.yml
+++ b/.github/ISSUE_TEMPLATE/chore.yml
@@ -41,6 +41,7 @@ body:
 
 - type: markdown
   attributes:
+    label: ⌚ DOR/✅ DOD
     value: |
       ### ⌚ DOR
 
@@ -60,3 +61,44 @@ body:
       - Code review realizado.
       - Testes prontos.
       - Documentação atualizada.
+
+- type: dropdown
+  id: prioridade
+  attributes:
+    label: 🗓️ Prioridade
+    description: Defina a prioridade.
+    options:
+    - 🧊 Baixa
+    - ⚙️ Média
+    - 🔥 Alta
+  validations:
+    required: true
+
+- type: input
+  id: estimativa
+  attributes:
+    label: ⏱️ Story points
+    description: Story points.
+    placeholder: "1, 3, 5, 8, 13 e 21"
+
+- type: markdown
+  attributes:
+    label: 💯 Fibonacci Score Table
+    value: |
+      ### Fibonacci Score Table Complexity/Effort Conversion
+
+      | COMPLEXITY | EFFORT | PUNCTUATION |
+      | --- | --- | --- |
+      | L | L | 1 |
+      | M | L | 3 |
+      | H | L | 5 |
+      | L | M | 3 |
+      | M | M | 8 |
+      | H | M | 13 |
+      | L | H | 5 |
+      | M | H | 13 |
+      | H | H | 21 |
+
+      - L = Low
+      - M = Medium
+      - H = High
