--- a/.github/ISSUE_TEMPLATE/fix.yml
+++ b/.github/ISSUE_TEMPLATE/fix.yml
@@ -47,17 +47,49 @@ body:
   id: prioridade
   attributes:
     label: 🗓️ Prioridade
-    description: Defina a prioridade deste fix.
+    description: Defina a prioridade.
     options:
-    - 🔥 Alta
-    - ⚙️ Média
     - 🧊 Baixa
+    - ⚙️ Média
+    - 🔥 Alta
   validations:
     required: true
 
 - type: input
   id: estimativa
   attributes:
-    label: ⏱️ Estimativa
-    description: Tempo estimado ou story points.
+    label: ⏱️ Story points
+    description: Story points.
     placeholder: "Exemplo: 2 dias ou 3 story points"
+
+- type: markdown
+  attributes:
+    label: 💯 Fibonacci Score Table
+    value: |
+      ### Fibonacci Score Table Complexity/Effort Conversion
+
+      .-----------------------------------.
+      | COMPLEXITY | EFFORT | PUNCTUATION |
+      .-----------------------------------|
+      | L          | L      | 1           |
+      |-----------------------------------|
+      | M          | L      | 3           |
+      |-----------------------------------|
+      | H          | L      | 5           |
+      |-----------------------------------|
+      | L          | M      | 3           |
+      |-----------------------------------|
+      | M          | M      | 8           |
+      |-----------------------------------|
+      | H          | M      | 13          |
+      |-----------------------------------|
+      | L          | H      | 5           |
+      |-----------------------------------|
+      | M          | H      | 13          |
+      |-----------------------------------|
+      | H          | H      | 21          |
+      `-----------------------------------´
+
+      . A - High;
+      . B - Low;
+      . N - Medium.
