--- a/.github/ISSUE_TEMPLATE/fix.yml
+++ b/.github/ISSUE_TEMPLATE/fix.yml
@@ -47,49 +47,17 @@ body:
   id: prioridade
   attributes:
     label: 🗓️ Prioridade
-    description: Defina a prioridade.
+    description: Defina a prioridade deste fix.
     options:
-    - 🧊 Baixa
-    - ⚙️ Média
     - 🔥 Alta
+    - ⚙️ Média
+    - 🧊 Baixa
   validations:
     required: true
 
 - type: input
   id: estimativa
   attributes:
-    label: ⏱️ Story points
-    description: Story points.
+    label: ⏱️ Estimativa
+    description: Tempo estimado ou story points.
     placeholder: "Exemplo: 2 dias ou 3 story points"
-
-- type: markdown
-  attributes:
-    label: 💯 Fibonacci Score Table
-    value: |
-      ### Fibonacci Score Table Complexity/Effort Conversion
-
-      .-----------------------------------.
-      | COMPLEXITY | EFFORT | PUNCTUATION |
-      .-----------------------------------|
-      | L          | L      | 1           |
-      |-----------------------------------|
-      | M          | L      | 3           |
-      |-----------------------------------|
-      | H          | L      | 5           |
-      |-----------------------------------|
-      | L          | M      | 3           |
-      |-----------------------------------|
-      | M          | M      | 8           |
-      |-----------------------------------|
-      | H          | M      | 13          |
-      |-----------------------------------|
-      | L          | H      | 5           |
-      |-----------------------------------|
-      | M          | H      | 13          |
-      |-----------------------------------|
-      | H          | H      | 21          |
-      `-----------------------------------´
-
-      . A - High;
-      . B - Low;
-      . N - Medium.
