--- a/.github/ISSUE_TEMPLATE/chore.yml
+++ b/.github/ISSUE_TEMPLATE/chore.yml
@@ -78,14 +78,14 @@ body:
   attributes:
     label: ⏱️ Story points
     description: Story points.
-    placeholder: "1, 3, 5, 8, 13 e 21"
+    placeholder: "1, 3, 5, 8, 13 ou 21"
 
 - type: markdown
   attributes:
     value: |
       ### Fibonacci Score Table Complexity/Effort Conversion
 
-      | COMPLEXITY | EFFORT | PUNCTUATION |
+      | COMPLEXITY  | EFFORT  | PUNCTUATION  |
       | --- | --- | --- |
       | L | L | 1 |
       | M | L | 3 |
