feat(melhorar): Melhorar estruturação tarefas kanban
Melhorar estruturação das tarefas no kanban para que reflitam nossas rotinas.

Refs: 1

--- a/.github/ISSUE_TEMPLATE/chore.yml
+++ b/.github/ISSUE_TEMPLATE/chore.yml
@@ -85,7 +85,7 @@ body:
     value: |
       ### Fibonacci Score Table Complexity/Effort Conversion
 
-      | COMPLEXITY  | EFFORT  | PUNCTUATION  |
+      | . COMPLEXITY . | . EFFORT . | . PUNCTUATION . |
       | --- | --- | --- |
       | L | L | 1 |
       | M | L | 3 |
