--- a/.github/ISSUE_TEMPLATE/chore.yml
+++ b/.github/ISSUE_TEMPLATE/chore.yml
@@ -85,18 +85,20 @@ body:
     value: |
       ### Fibonacci Score Table Complexity/Effort Conversion
 
-      | COMPLEXITY . | EFFORT . | PUNCTUATION |
-      | --- | --- | --- |
-      | L | L | 1 |
-      | M | L | 3 |
-      | H | L | 5 |
-      | L | M | 3 |
-      | M | M | 8 |
-      | H | M | 13 |
-      | L | H | 5 |
-      | M | H | 13 |
-      | H | H | 21 |
+      | COMPLEXITY | EFFORT | PUNCTUATION |
+      | ---------- | ------ | ----------- |
+      | L          | L      | 1           |
+      | M          | L      | 3           |
+      | H          | L      | 5           |
+      | L          | M      | 3           |
+      | M          | M      | 8           |
+      | H          | M      | 13          |
+      | L          | H      | 5           |
+      | M          | H      | 13          |
+      | H          | H      | 21          |
 
-      - L = Low
-      - M = Medium
-      - H = High
+        - L = low
+        - M = medium
+        - H = high
+
+        **NOTA:** Acima de 21 pontos, considerar dividir em subtarefas.
