--- a/.github/ISSUE_TEMPLATE/feat.yml
+++ b/.github/ISSUE_TEMPLATE/feat.yml
@@ -6,75 +6,99 @@ body:
 - type: textarea
   id: descricao
   attributes:
-    label: 📝 Descrição
-    description: Resumo técnico da feature.
-    placeholder: "Exemplo: Implementar endpoint `/otp/validate` para validação de código OTP."
-  validations:
-    required: true
-
-- type: textarea
-  id: tarefa
-  attributes:
-    label: ⚙️ Tarefa / Descrição Técnica
-    description: Explique o que será feito de forma breve e objetiva.
-    placeholder: "Exemplo: Criar rota POST `/otp/validate`, validar código com PyOTP, e retornar novo token JWT."
-  validations:
-    required: true
-
-- type: checkboxes
-  id: criterios
-  attributes:
-    label: ✅ Critérios de Aceite
-    options:
-    - label: Funcionalidade testada e validada
-    - label: Retrocompatibilidade garantida (nada anterior quebrado)
-    - label: Documentação atualizada (README, Swagger, Wiki, etc.)
-    - label: Código revisado com **Ruff Linter** (`ruff check .`)
-    - label: Código formatado com **Ruff Format** (`ruff format .`)
-    - label: "**Pre-commit** configurado e executando lint/format antes dos commits"
-    - label: Código limpo e legível
-
-- type: textarea
-  id: dependencias
-  attributes:
-    label: 🔗 Dependências
-    description: Liste dependências de outras issues ou tarefas.
-    placeholder: "Exemplo: depende da issue #45 (endpoint `/otp/create`)"
-
-- type: textarea
-  id: stack
-  attributes:
-    label: 🧰 Stack / Alterações Técnicas
-    description: Descreva pacotes, bibliotecas ou mudanças técnicas necessárias.
+    label: 📝 Descrição Geral
+    description: Descrição geral.
     placeholder: |
-      Exemplo:
-      - Adicionado pacote `pyotp`
-      - Atualizado SQLAlchemy para versão 2.x
+      1. VISÃO DO USUÁRIO
 
-- type: checkboxes
-  id: testes
+      COMO: XXX
+      QUERO: XXX
+      PARA: XXX
+
+      [...]
+
+      2. ANEXOS QUE APOIEM O DESENVOLVIMENTO
+
+      XXX
+
+      3. REGRAS DE NEGÓCIO
+
+      XXX
+
+      4. DEPENDÊNCIAS E RISCOS
+
+      XXX
+
+      5. CRITÉRIO DE ACEITE
+
+      DADO: XXX
+      QUANDO: XXX
+      ENTÃO: XXX
+
+      [...]
+  validations:
+    required: true
+
+- type: markdown
   attributes:
-    label: 🧪 Testes
-    options:
-    - label: Casos de sucesso e falha validados
-    - label: Logs e erros tratados corretamente
-    - label: Garantia de não quebrar código existente
+    value: |
+      ### ⌚ DOR
+
+      - História criada utilizando o template de escrita.
+      - História refinada, quebrada nas subtarefas.
+      - História alinhada com o time/interessados.
+      - Mapeamento das APIs, serviços e definições arquiteturais impactadas pela história e procedimentos de publicação.
+      - Ambientes configurados e acessos necessários disponibilizados.
+      - Ausência de dependências com outras Histórias inacabadas.
+      - Legislação e conformidade verificadas, se aplicável.
+
+      ### ✅ DOD
+
+      - Atendimento e evidências de todos os critérios de aceite.
+      - Testes unitários desenvolvidos e executados.
+      - Deploy em PRD.
+      - Code review realizado.
+      - Testes prontos.
+      - Documentação atualizada.
 
 - type: dropdown
   id: prioridade
   attributes:
     label: 🗓️ Prioridade
-    description: Defina a prioridade desta feature.
+    description: Defina a prioridade.
     options:
-    - 🔥 Alta
-    - ⚙️ Média
     - 🧊 Baixa
+    - ⚙️ Média
+    - 🔥 Alta
   validations:
     required: true
 
 - type: input
   id: estimativa
   attributes:
-    label: ⏱️ Estimativa
-    description: Tempo estimado ou story points.
-    placeholder: "Exemplo: 3 dias ou 5 story points"
+    label: ⏱️ Story points
+    description: Story points.
+    placeholder: "1, 3, 5, 8, 13 ou 21"
+
+- type: markdown
+  attributes:
+    value: |
+      ### Fibonacci Score Table Complexity/Effort Conversion
+
+      | COMPLEXITY  | EFFORT  | PUNCTUATION  |
+      | ----------- | ------- | ------------ |
+      | L           | L       | 1            |
+      | M           | L       | 3            |
+      | H           | L       | 5            |
+      | L           | M       | 3            |
+      | M           | M       | 8            |
+      | H           | M       | 13           |
+      | L           | H       | 5            |
+      | M           | H       | 13           |
+      | H           | H       | 21           |
+
+        - L = low
+        - M = medium
+        - H = high
+
+        **NOTA:** Acima de 21 pontos, considerar dividir em subtarefas.
