--- a/.github/ISSUE_TEMPLATE/fix.yml
+++ b/.github/ISSUE_TEMPLATE/fix.yml
@@ -1,63 +1,104 @@
 name: "🐞 Bug Fix"
 description: "Correção de comportamento inesperado ou erro identificado"
 title: "🩹 [FIX] - "
-labels: [ "bug", "fix" ]
+labels: [ "bug"]
 body:
 - type: textarea
   id: descricao
   attributes:
-    label: 📝 Descrição
-    description: Resumo do problema a ser corrigido.
-    placeholder: "Exemplo: Corrigir erro de validação no endpoint `/otp/validate` que retorna 500 em vez de 400."
+    label: 📝 Descrição Geral
+    description: Descrição geral.
+    placeholder: |
+      1. VISÃO DO USUÁRIO
+
+      COMO: XXX
+      QUERO: XXX
+      PARA: XXX
+
+      [...]
+
+      2. ANEXOS QUE APOIEM O DESENVOLVIMENTO
+
+      XXX
+
+      3. REGRAS DE NEGÓCIO
+
+      XXX
+
+      4. DEPENDÊNCIAS E RISCOS
+
+      XXX
+
+      5. CRITÉRIO DE ACEITE
+
+      DADO: XXX
+      QUANDO: XXX
+      ENTÃO: XXX
+
+      [...]
   validations:
     required: true
 
-- type: textarea
-  id: causa
+- type: markdown
   attributes:
-    label: ⚙️ Causa / Descrição Técnica
-    description: Explique brevemente o motivo do bug e a abordagem da correção.
-    placeholder: "Exemplo: Falta de validação no campo `pin` antes da query ao banco."
-  validations:
-    required: true
+    value: |
+      ### ⌚ DOR
 
-- type: checkboxes
-  id: criterios
-  attributes:
-    label: ✅ Critérios de Aceite
-    options:
-    - label: Bug reproduzido e validado como corrigido
-    - label: Testes adicionados ou ajustados para o caso corrigido
-    - label: Retrocompatibilidade garantida
-    - label: Código revisado com **Ruff Linter** (`ruff check .`)
-    - label: Código formatado com **Ruff Format** (`ruff format .`)
-    - label: "**Pre-commit** configurado e executado"
-    - label: Código limpo, direto e sem gambiarras
+      - História criada utilizando o template de escrita.
+      - História refinada, quebrada nas subtarefas.
+      - História alinhada com o time/interessados.
+      - Mapeamento das APIs, serviços e definições arquiteturais impactadas pela história e procedimentos de publicação.
+      - Ambientes configurados e acessos necessários disponibilizados.
+      - Ausência de dependências com outras Histórias inacabadas.
+      - Legislação e conformidade verificadas, se aplicável.
 
-- type: checkboxes
-  id: testes
-  attributes:
-    label: 🧪 Testes
-    options:
-    - label: Teste de regressão criado
-    - label: Caso de erro reproduzido e validado
-    - label: Logs e mensagens corretas
+      ### ✅ DOD
+
+      - Atendimento e evidências de todos os critérios de aceite.
+      - Testes unitários desenvolvidos e executados.
+      - Deploy em PRD.
+      - Code review realizado.
+      - Testes prontos.
+      - Documentação atualizada.
 
 - type: dropdown
   id: prioridade
   attributes:
     label: 🗓️ Prioridade
-    description: Defina a prioridade deste fix.
+    description: Defina a prioridade.
     options:
-    - 🔥 Alta
-    - ⚙️ Média
     - 🧊 Baixa
+    - ⚙️ Média
+    - 🔥 Alta
   validations:
     required: true
 
 - type: input
   id: estimativa
   attributes:
-    label: ⏱️ Estimativa
-    description: Tempo estimado ou story points.
-    placeholder: "Exemplo: 2 dias ou 3 story points"
+    label: ⏱️ Story points
+    description: Story points.
+    placeholder: "1, 3, 5, 8, 13 ou 21"
+
+- type: markdown
+  attributes:
+    value: |
+      ### Fibonacci Score Table Complexity/Effort Conversion
+
+      | COMPLEXITY  | EFFORT  | PUNCTUATION  |
+      | ----------- | ------- | ------------ |
+      | L           | L       | 1            |
+      | M           | L       | 3            |
+      | H           | L       | 5            |
+      | L           | M       | 3            |
+      | M           | M       | 8            |
+      | H           | M       | 13           |
+      | L           | H       | 5            |
+      | M           | H       | 13           |
+      | H           | H       | 21           |
+
+        - L = low
+        - M = medium
+        - H = high
+
+        **NOTA:** Acima de 21 pontos, considerar dividir em subtarefas.
