--- a/.github/ISSUE_TEMPLATE/hotfix.yml
+++ b/.github/ISSUE_TEMPLATE/hotfix.yml
@@ -1,58 +1,104 @@
 name: "🚨 Hotfix"
 description: "Correções urgentes em produção ou em ambientes críticos"
 title: "🔥 [HOTFIX] - "
-labels: [ "hotfix", "urgent" ]
+labels: [ "hotfix"]
 body:
 - type: textarea
   id: descricao
   attributes:
-    label: 📝 Descrição
-    description: Descreva brevemente o problema crítico e o impacto.
-    placeholder: "Exemplo: Corrigir falha de autenticação em produção após atualização do JWT."
+    label: 📝 Descrição Geral
+    description: Descrição geral.
+    placeholder: |
+      1. VISÃO DO USUÁRIO
+
+      COMO: XXX
+      QUERO: XXX
+      PARA: XXX
+
+      [...]
+
+      2. ANEXOS QUE APOIEM O DESENVOLVIMENTO
+
+      XXX
+
+      3. REGRAS DE NEGÓCIO
+
+      XXX
+
+      4. DEPENDÊNCIAS E RISCOS
+
+      XXX
+
+      5. CRITÉRIO DE ACEITE
+
+      DADO: XXX
+      QUANDO: XXX
+      ENTÃO: XXX
+
+      [...]
   validations:
     required: true
-
-- type: textarea
-  id: acao
-  attributes:
-    label: ⚙️ Ação Técnica
-    description: Explique o que será feito de forma direta e objetiva.
-    placeholder: "Exemplo: Reverter validação incorreta do payload e ajustar geração de token JWT."
-  validations:
-    required: true
-
-- type: checkboxes
-  id: criterios
-  attributes:
-    label: ⚡ Critérios de Aceite
-    options:
-    - label: Correção aplicada e validada em ambiente crítico
-    - label: Teste rápido de validação funcional (manual e/ou automatizado)
-    - label: Nenhum fluxo principal quebrado
-    - label: Código revisado com **Ruff Linter** (`ruff check .`)
-    - label: Código formatado com **Ruff Format** (`ruff format .`)
-    - label: "**Pre-commit** executado antes do merge"
-    - label: Código limpo, conciso e sem soluções paliativas
-
-- type: checkboxes
-  id: pos_deploy
-  attributes:
-    label: 🔎 Pós-Deploy
-    options:
-    - label: Verificar logs de erro e métricas
-    - label: Validar fluxo de autenticação e endpoints críticos
-    - label: Garantir rollback disponível se necessário
 
 - type: markdown
   attributes:
     value: |
-      ## 🗓️ Prioridade
-      **🚨 URGENTE** - Correção crítica com prioridade máxima
+      ### ⌚ DOR
+
+      - História criada utilizando o template de escrita.
+      - História refinada, quebrada nas subtarefas.
+      - História alinhada com o time/interessados.
+      - Mapeamento das APIs, serviços e definições arquiteturais impactadas pela história e procedimentos de publicação.
+      - Ambientes configurados e acessos necessários disponibilizados.
+      - Ausência de dependências com outras Histórias inacabadas.
+      - Legislação e conformidade verificadas, se aplicável.
+
+      ### ✅ DOD
+
+      - Atendimento e evidências de todos os critérios de aceite.
+      - Testes unitários desenvolvidos e executados.
+      - Deploy em PRD.
+      - Code review realizado.
+      - Testes prontos.
+      - Documentação atualizada.
+
+- type: dropdown
+  id: prioridade
+  attributes:
+    label: 🗓️ Prioridade
+    description: Defina a prioridade.
+    options:
+    - 🧊 Baixa
+    - ⚙️ Média
+    - 🔥 Alta
+  validations:
+    required: true
 
 - type: input
   id: estimativa
   attributes:
-    label: ⏱️ Estimativa
-    description: Tempo estimado para aplicar o hotfix.
-    placeholder: "Exemplo: Imediata / 1 hora"
-    value: "Imediata"
+    label: ⏱️ Story points
+    description: Story points.
+    placeholder: "1, 3, 5, 8, 13 ou 21"
+
+- type: markdown
+  attributes:
+    value: |
+      ### Fibonacci Score Table Complexity/Effort Conversion
+
+      | COMPLEXITY  | EFFORT  | PUNCTUATION  |
+      | ----------- | ------- | ------------ |
+      | L           | L       | 1            |
+      | M           | L       | 3            |
+      | H           | L       | 5            |
+      | L           | M       | 3            |
+      | M           | M       | 8            |
+      | H           | M       | 13           |
+      | L           | H       | 5            |
+      | M           | H       | 13           |
+      | H           | H       | 21           |
+
+        - L = low
+        - M = medium
+        - H = high
+
+        **NOTA:** Acima de 21 pontos, considerar dividir em subtarefas.
