--- a/.github/ISSUE_TEMPLATE/refactor.yml
+++ b/.github/ISSUE_TEMPLATE/refactor.yml
@@ -97,8 +97,8 @@ body:
       | M           | H       | 13           |
       | H           | H       | 21           |
 
-        - L = low
-        - M = medium
-        - H = high
+        - L = Low
+        - M = Medium
+        - H = High
 
         **NOTA:** Acima de 21 pontos, considerar dividir em subtarefas.
