feat(project): .github - Corrigir e melhorar templates.
Corrigir e melhorar templates: "Descrição" e "Fibonacci Score Table Complexity/Effort Conversion".

Refs: 4

--- a/.github/ISSUE_TEMPLATE/chore.yml
+++ b/.github/ISSUE_TEMPLATE/chore.yml
@@ -8,7 +8,7 @@ body:
   attributes:
     label: 📝 Descrição Geral
     description: Descrição geral.
-    default: |
+    value: |
       1. VISÃO DO USUÁRIO
 
       COMO: XXX
