--- a/.github/ISSUE_TEMPLATE/refactor.yml
+++ b/.github/ISSUE_TEMPLATE/refactor.yml
@@ -64,7 +64,7 @@ body:
 - type: dropdown
   id: prioridade
   attributes:
-    label: 🗓️ Prioridade
+    label: 🗓️ Priority
     description: Defina a prioridade.
     options:
     - 🧊 Baixa
