--- a/.github/ISSUE_TEMPLATE/feat.yml
+++ b/.github/ISSUE_TEMPLATE/feat.yml
@@ -14,45 +14,57 @@ body:
       required: true
 
   - type: dropdown
-    id: status
-    attributes:
-      label: 🧭 Status
-      options:
-        - To Do
-        - Doing
-        - Review
-        - Blocked
-        - Done
-    validations:
-      required: true
-
-  - type: dropdown
     id: prioridade
     attributes:
       label: 🗓️ Priority
       options:
-        - 🧊 Baixa
-        - ⚙️ Média
-        - 🔥 Alta
+        - Critical
+        - High
+        - Medium
+        - Low
     validations:
       required: true
 
-  - type: input
+  - type: dropdown
     id: story_points
     attributes:
       label: ⏱️ Story Points
-      description: Use sequência de Fibonacci (1, 3, 5, 8, 13, 21).
-      placeholder: "1, 3, 5, 8, 13 ou 21"
+      description: Use sequência de Fibonacci (1, 3, 5, 8, 13).
+      options:
+        - 1
+        - 3
+        - 5
+        - 8
+        - 13
+    validations:
+      required: true
 
   - type: dropdown
     id: iteration
     attributes:
       label: 🌀 Iteration (Sprint)
-      description: "Nome igual ao do Project (ex.: Sprint 12)"
+      description: "Iteração conforme configurações do projeto."
       options:
-        - Sprint 11
-        - Sprint 12
-        - Sprint 13
+        - Iteration 1
+        - Iteration 2
+        - Iteration 3
+        - Iteration 4
+        - Iteration 5
+        - Iteration 6
+        - Iteration 7
+        - Iteration 8
+        - Iteration 9
+        - Iteration 10
+        - Iteration 11
+        - Iteration 12
+        - Iteration 13
+        - Iteration 14
+        - Iteration 15
+        - Iteration 16
+        - Iteration 17
+        - Iteration 18
+        - Iteration 19
+        - Iteration 20
 
   - type: input
     id: start_date
