feat(kanban): Integrar dados issues com engine "Github Projects"
Integrar os dados das issues com a engine do "Github Projects".
Para que isso seja possível temos que criar Jobs no repositório ".github".

Refs: 14

--- a/.github/ISSUE_TEMPLATE/docs.yml
+++ b/.github/ISSUE_TEMPLATE/docs.yml
@@ -1,7 +1,7 @@
-name: "🧹 Chore"
-description: "Tarefas de manutenção e ajustes que não alteram comportamento do sistema"
-title: "🦆 [CHORE] - "
-labels: [ "chore" ]
+name: "📚 Documentação"
+description: "Atualização ou criação de documentação técnica, guias e referências"
+title: "🖊️ [DOCS] - "
+labels: [ "docs" ]
 projects:
   - clickpto/Kanban
 body:
