--- a/.github/ISSUE_TEMPLATE/feat.yml
+++ b/.github/ISSUE_TEMPLATE/feat.yml
@@ -1,7 +1,7 @@
 name: "🚀 Feature"
 description: "Registrar nova funcionalidade ou melhoria técnica"
 title: "🧩 [FEAT] - "
-labels: [ "feature" ]
+labels: [ "feat" ]
 projects:
   - clickpto/Kanban
 body:
@@ -12,77 +12,59 @@ body:
       placeholder: Descrição Geral
     validations:
       required: true
-
-  - type: dropdown
-    id: prioridade
+  - type: markdown
     attributes:
-      label: 🗓️ Priority
-      options:
-        - Low
-        - Medium
-        - High
-        - Critical
-    validations:
-      required: true
+      value: |
+        ## ORIENTAÇÕES GERAIS
 
-  - type: dropdown
-    id: story_points
-    attributes:
-      label: ⏱️ Story Points
-      description: Use sequência de Fibonacci (1, 3, 5, 8, 13).
-      options:
-        - 1
-        - 3
-        - 5
-        - 8
-        - 13
-    validations:
-      required: true
+        ### Preencher formulário "Kanban"
 
-  - type: dropdown
-    id: iteration
-    attributes:
-      label: 🌀 Iteration (Sprint)
-      description: "Iteração conforme configurações do projeto."
-      options:
-        - Iteration 1
-        - Iteration 2
-        - Iteration 3
-        - Iteration 4
-        - Iteration 5
-        - Iteration 6
-        - Iteration 7
-        - Iteration 8
-        - Iteration 9
-        - Iteration 10
-        - Iteration 11
-        - Iteration 12
-        - Iteration 13
-        - Iteration 14
-        - Iteration 15
-        - Iteration 16
-        - Iteration 17
-        - Iteration 18
-        - Iteration 19
-        - Iteration 20
+        O formulário "Kanban" estará disponível na própria tarefa após a criação desta.
 
-  - type: input
-    id: start_date
-    attributes:
-      label: 📅 Start date
-      description: "Formato YYYY-MM-DD (ex.: 2025-11-07)"
-      placeholder: "2025-11-07"
+          Priority (❗ Requerido)
+          Story Points (❗ Requerido¹)
+          Iteration (❗ Requerido ao liberar para Sprint)
+          Start date (❗ Requerido ao iniciar a atividade)
+          End date (❗ Requerido ao finalizar a atividade)
+          Release (❗ Requerido se roadmap for definido¹)
 
-  - type: input
-    id: end_date
-    attributes:
-      label: 📅 End date
-      description: "Formato YYYY-MM-DD (ex.: 2025-11-21)"
-      placeholder: "2025-11-21"
+          ¹ Para atividades de desenvolvimento.
 
-  - type: input
-    id: release
-    attributes:
-      label: 🏷️ Release/Milestone
-      description: "Ex.: v1.4.0 ou Sprint-Release-2025-11"
-      placeholder: "v1.4.0"
+        ### ⌚ DOR
+
+        - História criada utilizando o template de escrita.
+        - História refinada, quebrada nas subtarefas.
+        - História alinhada com o time/interessados.
+        - Mapeamento das APIs, serviços e definições arquiteturais impactadas pela história e procedimentos de publicação.
+        - Ambientes configurados e acessos necessários disponibilizados.
+        - Ausência de dependências com outras Histórias inacabadas.
+        - Legislação e conformidade verificadas, se aplicável.
+
+        ### ✅ DOD
+
+        - Atendimento e evidências de todos os critérios de aceite.
+        - Testes unitários desenvolvidos e executados.
+        - Deploy em PRD.
+        - Code review realizado.
+        - Testes prontos.
+        - Documentação atualizada.
+
+        ### Fibonacci Score Table Complexity/Effort Conversion (Story Points)
+
+        | COMPLEXITY  | EFFORT  | PUNCTUATION  |
+        | ----------- | ------- | ------------ |
+        | L           | L       | 1            |
+        | M           | L       | 3            |
+        | H           | L       | 5            |
+        | L           | M       | 3            |
+        | M           | M       | 8            |
+        | H           | M       | 13           |
+        | L           | H       | 5            |
+        | M           | H       | 13           |
+        | H           | H       | 21           |
+
+          - L = Low
+          - M = Medium
+          - H = High
+
+          **NOTA:** A partir de 21 pontos, dividir em outras tarefas.
