feat(kanban): Integrar dados issues com engine "Github Projects"
Integrar os dados das issues com a engine do "Github Projects".
Para que isso seja possível temos que criar Jobs no repositório ".github".

Refs: 14

--- a/.github/ISSUE_TEMPLATE/chore.yml
+++ b/.github/ISSUE_TEMPLATE/chore.yml
@@ -21,6 +21,7 @@ body:
 
         O formulário "Kanban" estará disponível na própria tarefa após a criação desta.
 
+          - Assignee (Requerido ao iniciar a atividade)
           - Priority (Requerido)
           - Story Points (Requerido¹)
           - Iteration (Requerido ao liberar para Sprint)
